# ShapeAlign

./: CMakeLists.txt  README.md
resources/: monkey.mtl  table1.mtl  table2.mtl
src/: convert.cpp  main.cpp  nanogui_header.hpp
src/application/: app_colorcube.cpp  app_colorcube.hpp  app_shapealign.cpp  app_shapealign.hpp
src/io/: objloader.hpp
src/render/: gltexture.cpp  gltexture.hpp
src/render/canvas/: canvas_colorcube.cpp  canvas_colorcube.hpp  canvas_image.cpp  canvas_image.hpp  canvas_model.cpp  canvas_model.hpp
src/render/shader/: shader.hpp  shader_colorcube.cpp  shader_colorcube.hpp  shader_image.cpp  shader_image.hpp  shader_model.cpp  shader_model.hpp
src/storage/: objdata.cpp  objdata.hpp  objloader.hpp  persistent.cpp  persistent.hpp  pose.cpp  pose.hpp  sens.cpp  sens.h  sens.hpp
